[project]
name = "show-status-each-github-action"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "jylenhof", email = "jygithub@lenhof.eu.org" }]
dependencies = [
  "pygithub>=2.9.0",
]

[project.scripts]
show-status-each-github-action = "show_status_each_github_action:main"

[dependency-groups]
dev = [
  "pylint>=4.0.5",
  "pytest>=9.0.3",
  "ruff>=0.15.10",
  "ty>=0.0.29",
]

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"
